# gnostr-v0.0.0_67

./: .dockerignore  .gitignore  .gitmodules  BUILDING.md  CHANGELOG  CMakeCache.txt  CMakeLists.txt  CNAME  Cargo.toml  GIT-VERSION-FILE  GNUmakefile  Makefile  README.md  RELAYS.md  TIME  act.mk  build.cmake.sh  build.wt.sh  cargo.mk  clean.mk  gnostr-act.mk  gnostr-client.log.txt  gnostr-configurator  gnostr.c  gnostr.mk  index.html  legit.mk  loop.sh  make-legit.sh  package.json  pnpm-lock.yaml  pubkeys.txt  version
.github/workflows/: alpine-matrix._yml  alpine-matrix.yml  alpine.yml  automate.sh  automate.yml  gnostr-act.yml  gnostr-cat.yml  gnostr-install22.yml  gnostr-matrix2.yml  gnostr-pre-release.yml  gnostr-pre-release2.yml  gnostr-proxy22.yml  gnostr-query22.yml  gnostr.yml  gnpostr-matrix22.yml  macos-matrix.yml  macos-pre-release.yml  macos-release.yml  macos-release2.yml  pre-release.yml  release.yml  rust.yml  static.yml  ubuntu-gnostr-act.yml  ubuntu-gnostr-cat._yml  ubuntu-gnostr-cat.yml  ubuntu-gnostr-cli.yml  ubuntu-gnostr-client.yml  ubuntu-gnostr-get-set-relays.yml  ubuntu-gnostr-git.yml  ubuntu-gnostr-grep.yml  ubuntu-gnostr-install.yml  ubuntu-gnostr-legit.yml  ubuntu-gnostr-proxy.yml  ubuntu-gnostr-query.yml  ubuntu-gnostr-relay.yml  ubuntu-gnostr-sha256.yml  ubuntu-gnostr.yml  ubuntu-jq.yml  ubuntu-libsecp.yml  (+3 more)
.gnostr/: RELAYS.md  git-test1.sh  weeble_wobble.sh
desktop/: CMakeLists.txt  gnostro.cc
doc/: gnostr.1  nostril.1
examples/: examples.cc
ext/: openssl-3.0.5
ext/wt-4.10.0/: CMakeCache.txt  CMakeLists.txt
ext/wt-4.10.0/cmake/: WtFindBoost.txt
resources/: TargetArch.cmake
src/: .gnostr_sha256.c  gitminer.rs  gnostr-client.cc  gnostr-gnode.cc  gnostr-repo.c  gnostr-repo.cpp  gnostr-req.cc  gnostr_repo.cc  gnostr_sha256.c  main.rs  nostr.cc  nostr.hh  repo.rs  worker.rs  wss_relay.cc
src/nostril/: CMakeLists.txt  libnostri.dylib
template/: gnostr-get-relays  gnostr-git-reflog  gnostr-relays  gnostr-set-relays.c
test/: gnostr_sha256_test.c  tests.cc
web/: CMakeLists.txt  web.cc
