[package]
name    = "legit"
version = "0.1.0"
authors = ["@RandyMcMillan <randy.lee.mcmillan@gmail.com>", "John <john@throttle.io>"]
edition = "2021"
rust-version = "1.65.0"
description = "add proof of work to a git commit"
documentation = "https://legit.randymcmillan.net"
readme = "README.md"
homepage = "https://legit.randymcmillan.net/"
repository = "https://github.com/randymcmillan/legit.git"
license = "MIT OR Apache-2.0"
keywords = ["git", "pow", "proof of work"]
categories = ["command-line-utilities"]


[dependencies]
rust-crypto = "*"
git2        = "*"
argparse    = "*"
time        = "*"

