[package]
name    = "legit"
version = "0.2.3"
authors = ["@RandyMcMillan <randy.lee.mcmillan@gmail.com>", "John <john@throttle.io>"]
edition = "2021"
rust-version = "1.61.0"
description = "add proof of work to a git commit"
documentation = "https://legit.randymcmillan.net"
readme = "README.md"
homepage = "https://legit.randymcmillan.net/"
repository = "https://github.com/randymcmillan/legit.git"
license = "MIT OR Apache-2.0"
keywords = ["git", "pow", "proof-of-work"]
categories = ["command-line-utilities"]


[dependencies]
rust-crypto = "0.2.36"
git2        = "0.9.1"
argparse    = "0.2.2"
time        = "0.1.42"
chrono      = "0"
#crypto      = "0.4.0"
